fix: 🐛 OverflowX & margin top problem
fixed the overflowX bug cause by the pseudo element of the home section
container by setting App.tsx's mainContainer to overflowX hidden, fixed
the margin top bug in product section by using padding top

--- a/src/component/HomeSection/style.module.css
+++ b/src/component/HomeSection/style.module.css
@@ -8,7 +8,8 @@
     content: '';
     position: absolute;
     bottom: 0px;
-    left: 0;
+    left: 50%;
+    transform: translateX(-50%);
     border-top: 3.12vw solid #ff000000;
     border-left: 50vw solid #000000;
     border-right: 50vw solid #000000;
