--- a/src/component/ProductSection/style.module.css
+++ b/src/component/ProductSection/style.module.css
@@ -3,12 +3,11 @@
     max-width: 100%;
     height: 1480px;
     background: rgb(0, 0, 0);
-    border: black 1px solid;
+    padding-top: 144px;
 }
 
 .txt1 {
     height: 29px;
-    margin-top: 144px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 600;
@@ -179,6 +178,7 @@ h2 {
 @media (max-width:541px) {
     .container {
         height: 1018px;
+        padding-top: 102px;
     }
 
     .comicGrid{
@@ -191,8 +191,7 @@ h2 {
         font-size: 18px;
         line-height: 22px;
         text-align: center;
-        margin-top: 0;
-        margin: 102px auto 0 auto;
+        margin: 0 auto;
     }
 
     .txt2 {
